prometheus/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    app: prometheus
