prometheus/be-deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: prometheus
  annotations:
    verion: 0.2
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      name: blackbox-exporter
      labels:
        app: blackbox-exporter
      annotations:
        prometheus.io/scrape: "pod"
    spec:
      containers:
      - name: blackbox-exporter
        image: prom/blackbox-exporter
        ports:
        - containerPort: 9115
