prometheus/be-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: blackbox-exporter
spec:
  selector:
    app: blackbox-exporter
  ports:
  - protocol: TCP
    port: 9115
