prometheus/grafana-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana

    spec:
      volumes:
      - name: config
        configMap:
          name: grafana-config
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config
          mountPath: /etc/grafana
---
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: prometheus
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: grafana
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
