prometheus/grafana.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      name: grafana
      labels:
        app: grafana

    spec:
      volumes:
      - name: config
        configMap:
          name: grafana-config
          items:
          - key: grafana.ini
            path: grafana.ini
          - key: datasources.yml
            path: provisioning/datasources/prometheus.yml
          - key: dashboards.yml
            path: provisioning/dashboards/datascript.yml
      - name: dashboards
        configMap:
          name: grafana-dashboard
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config
          mountPath: /etc/grafana
        - name: config
          mountPath: /mnt/dashboards
---
kind: Service
apiVersion: v1
metadata:
  name: grafana
  annotations:
    prometheus.io/scrape: "true"
spec:
  selector:
    app: grafana
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
