prometheus/svc.yml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/prometheus/metrics"
spec:
  selector:
    app: prometheus
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
