prometheus/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    traefik.frontend.rule.type: PathPrefixStrip
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "htaccess"
spec:
  rules:
  - http:
      paths:
      - path: /prometheus
        backend:
          serviceName: prometheus
          servicePort: 9090
